templates/mok_template.yaml
---
# Source: mok/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-mok-dovecot
  labels:
    helm.sh/chart: mok-0.13.0
    app.kubernetes.io/name: mok
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: dovecot
spec:
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: mok
          app.kubernetes.io/instance: release-name
          app.kubernetes.io/component: postfix
    ports:
    - port: 24
      protocol: TCP
    - port: 12345
      protocol: TCP
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 110
      protocol: TCP
    - port: 143
      protocol: TCP
    - port: 993
      protocol: TCP
    - port: 995
      protocol: TCP
    - port: 4190
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mok
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: dovecot
---
# Source: mok/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-mok-postfix
  labels:
    helm.sh/chart: mok-0.13.0
    app.kubernetes.io/name: mok
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: postfix
spec:
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 25
      protocol: TCP
    - port: 465
      protocol: TCP
    - port: 587
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mok
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: postfix
---
# Source: mok/templates/dovecot.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-mok-dovecot
  labels:
    helm.sh/chart: mok-0.13.0
    app.kubernetes.io/name: mok
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: dovecot
spec:
  ports:
  - port: 110
    name: pop3
    protocol: TCP
  - port: 143
    name: imap4
    protocol: TCP
  - port: 993
    name: imaps
    protocol: TCP
  - port: 995
    name: pop3s
    protocol: TCP
  - port: 4190
    name: sieve
    protocol: TCP
  selector:
    app.kubernetes.io/name: mok
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: dovecot
  type: LoadBalancer
---
# Source: mok/templates/dovecot.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-mok-dovecot-internal
  labels:
    helm.sh/chart: mok-0.13.0
    app.kubernetes.io/name: mok
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: dovecot
spec:
  ports:
  - port: 24
    name: lmtp
  - port: 9090
    name: metrics
  - port: 12345
    name: auth
  selector:
    app.kubernetes.io/name: mok
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: dovecot
  type: ClusterIP
---
# Source: mok/templates/postfix.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-mok-postfix
  labels:
    helm.sh/chart: mok-0.13.0
    app.kubernetes.io/name: mok
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: postfix
spec:
  ports:
  - port: 25
    name: smtp
    protocol: TCP
  - port: 465
    name: submissions
    protocol: TCP
  - port: 587
    name: submission
    protocol: TCP
  selector:
    app.kubernetes.io/name: mok
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: postfix
  type: LoadBalancer
  externalTrafficPolicy: Local
---
# Source: mok/templates/dovecot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: mok-0.13.0
    app.kubernetes.io/name: mok
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: dovecot
  name: release-name-mok-dovecot
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mok
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: dovecot
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mok
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: dovecot
      annotations:
        checksum/config: d38af97119343ab9a779be94325fb24121f0e10d5a641418ef2fd999c13ad5d7
    spec:
      serviceAccountName: release-name-mok
      securityContext:
        {}
      terminationGracePeriodSeconds: 300
      containers:
        - name: dovecot
          image: "quay.io/shivering-isles/dovecot:2.3.21"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 24
              name: lmtp
            - containerPort: 110
              name: pop3
            - containerPort: 143
              name: imap4
            - containerPort: 993
              name: imaps
            - containerPort: 995
              name: pop3s
            - containerPort: 4190
              name: sieve
            - containerPort: 9090
              name: metrics
            - containerPort: 12345
              name: auth
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
              - SYS_CHROOT
              - CHOWN
              - CAP_NET_BIND_SERVICE
              - SETUID
              - SETGID
              - FOWNER
              - KILL
              drop:
              - ALL
            runAsNonRoot: false
          volumeMounts:
            - name: vmail
              mountPath: /srv/mail/
            - name: users
              mountPath: "/srv/passdb/"
              readOnly: true
            - name: tls
              mountPath: "/srv/tls/"
              readOnly: true
            - name: config
              mountPath: /etc/dovecot/dovecot.conf
              subPath: dovecot.conf
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: release-name-mok-dovecot
        - name: vmail
          persistentVolumeClaim:
            claimName: release-name-mok-dovecot-vmail
        - name: users
          secret:
            secretName: release-name-mok-dovecot-users
        - name: tls
          secret:
            secretName: nil
---
# Source: mok/templates/postfix.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-mok-postfix
  labels:
    helm.sh/chart: mok-0.13.0
    app.kubernetes.io/name: mok
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: postfix
spec:
  replicas: 1
  serviceName: release-name-mok-postfix-statefulset
  selector:
    matchLabels:
      app.kubernetes.io/name: mok
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: postfix
  volumeClaimTemplates:
    - metadata:
        name: spool
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Delete
  template:
    metadata:
      annotations:
        checksum/secret: d38af97119343ab9a779be94325fb24121f0e10d5a641418ef2fd999c13ad5d7
        checksum/config: 57f80cf99d428e10e0083b76a23de2cd247be8375c6f43e34d34a1fa78aff8c0
      labels:
        app.kubernetes.io/name: mok
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: postfix
    spec:
      serviceAccountName: release-name-mok
      securityContext:
        {}
      containers:
        - name: postfix
          image: quay.io/shivering-isles/postfix:3.8.6
          imagePullPolicy: IfNotPresent
          workingDir: /etc/postfix
          command:
            - postfix
            - -c
            - /etc/postfix
            - start-fg
          lifecycle:
            preStop:
              exec:
                # flush all emails before shutting down
                command:
                  - postqueue
                  - -f
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 5
            exec:
              command:
                - sh
                - -c
                - >-
                  printf "EHLO healthcheck\n" | nc 127.0.0.1 587 |
                  grep -qE "^220.*ESMTP Postfix"
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 1
            exec:
              command:
                - sh
                - -c
                - >-
                  ps axf | fgrep -v grep | fgrep -q "/usr/libexec/postfix/master"
          startupProbe:
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 12
            exec:
              command:
                - sh
                - -c
                - >-
                  ps axf | fgrep -v grep | fgrep -q "/usr/libexec/postfix/master"
          ports:
            - containerPort: 25
              name: smtp
            - containerPort: 465
              name: submissions
            - containerPort: 587
              name: submission
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
              - SYS_CHROOT
              - CHOWN
              - CAP_NET_BIND_SERVICE
              - SETUID
              - SETGID
              - FOWNER
              - DAC_OVERRIDE
              drop:
              - ALL
            runAsNonRoot: false
          volumeMounts:
            - name: config
              mountPath: /etc/postfix/master.cf
              subPath: master.cf
              readOnly: true
            - name: config
              mountPath: /etc/postfix/main.cf
              subPath: main.cf
              readOnly: true
            - name: spool
              mountPath: /var/spool/postfix/
            - name: cache
              mountPath: "/srv/tmp"
            - name: maps
              mountPath: "/srv/virtual"
              readOnly: true
            - name: tls
              mountPath: "/srv/tls"
              readOnly: true
      volumes:
        - name: maps
          secret:
            secretName: release-name-mok-postfix-maps
        - name: config
          configMap:
            name: release-name-mok-postfix
            defaultMode: 0644
        - name: tls
          secret:
            secretName: nil
        - name: cache
          emptyDir: {}
